--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Steve Ling
 description: UX @ Sam's Club
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: images/avatar-darth_sunglasses.jpg
+avatar: http://slingman.github.io/blog/images/avatar-darth_sunglasses.jpg
 
 #
 # Flags below are optional
