--- a/_config.yml
+++ b/_config.yml
@@ -21,12 +21,12 @@ footer-links:
   email:
   facebook:
   flickr: https://www.flickr.com/photos/sling_flickr/
-  github: slingman/blog
+  github: https://github.com/slingman
   instagram: s.l.i.n.g
-  linkedin:
+  linkedin: https://www.linkedin.com/in/steveling/
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  twitter: 
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
