--- a/_config.yml
+++ b/_config.yml
@@ -20,10 +20,10 @@ footer-links:
   dribbble:
   email:
   facebook:
-  flickr: https://www.flickr.com/photos/sling_flickr/
-  github: https://github.com/slingman
+  flickr: sling_flickr/
+  github: slingman
   instagram: s.l.i.n.g
-  linkedin: https://www.linkedin.com/in/steveling/
+  linkedin: steveling
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: 
